// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section renders collapsable 1`] = `
.c0 {
  display: inline-block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<section
  class="Section Section_collapsable"
  data-lego="react"
>
  <div
    class="Section__header"
    data-lego="react"
  >
    <div>
      Hello world
    </div>
  </div>
  <div
    class="Section__controls"
    data-lego="react"
  >
    <div
      class="c0"
    >
      <span
        class="BaseIcon IconToggle"
        data-lego="react"
      >
        <svg
          fill="currentColor"
          height="10"
          viewBox="0 0 22 10"
          width="22"
        >
          <path
            d="M22 .7c0 .1-.1.4-.3.6L11.4 9.6c-.3.3-.7.3-1 0L.1 1.3C-.2 1-.2.6 0 .3.3 0 .7 0 1 .2L11 8 20.9.1c.3-.3.7-.3 1 .1.1.3.1.4.1.5z"
          />
        </svg>
      </span>
    </div>
  </div>
</section>
`;

exports[`Section renders collapsable tumbler 1`] = `
<section
  className="Section Section_collapsable"
  data-lego="react"
>
  <Header>
    <div>
      Hello world
    </div>
  </Header>
  <Controls>
    <tumbler
      checked={true}
      onChange={[Function]}
      size="s"
      theme="normal"
      tone="default"
      view="classic"
    />
  </Controls>
</section>
`;

exports[`Section renders collapsed 1`] = `
.c0 {
  display: inline-block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<section
  class="Section Section_collapsable Section_collapsed"
  data-lego="react"
>
  <div
    class="Section__header"
    data-lego="react"
  >
    <div>
      Hello world
    </div>
  </div>
  <div
    class="Section__controls"
    data-lego="react"
  >
    <div
      class="c0"
    >
      <span
        class="BaseIcon IconToggle"
        data-lego="react"
      >
        <svg
          fill="currentColor"
          height="10"
          viewBox="0 0 22 10"
          width="22"
        >
          <path
            d="M22 .7c0 .1-.1.4-.3.6L11.4 9.6c-.3.3-.7.3-1 0L.1 1.3C-.2 1-.2.6 0 .3.3 0 .7 0 1 .2L11 8 20.9.1c.3-.3.7-.3 1 .1.1.3.1.4.1.5z"
          />
        </svg>
      </span>
    </div>
  </div>
</section>
`;

exports[`Section renders with Body and passed className 1`] = `
<section
  class="Section"
  data-lego="react"
>
  <div
    class="Section__body className"
    data-lego="react"
  >
    test head
  </div>
  <div
    class="Section__controls"
    data-lego="react"
  />
</section>
`;

exports[`Section renders with Header and passed className 1`] = `
<section
  class="Section"
  data-lego="react"
>
  <div
    class="Section__header className"
    data-lego="react"
  >
    test head
  </div>
  <div
    class="Section__controls"
    data-lego="react"
  />
</section>
`;

exports[`Section renders with head and body 1`] = `
<section
  class="Section"
  data-lego="react"
>
  <div
    class="Section__header"
    data-lego="react"
  >
    test head
  </div>
  <div
    class="Section__body"
    data-lego="react"
  >
    test body
  </div>
  <div
    class="Section__controls"
    data-lego="react"
  />
</section>
`;

exports[`Section renders with head string 1`] = `
<section
  class="Section"
  data-lego="react"
>
  <div
    class="Section__header"
    data-lego="react"
  >
    test head
  </div>
  <div
    class="Section__controls"
    data-lego="react"
  />
</section>
`;

exports[`Section renders with passed className prop 1`] = `
<section
  class="Section className"
  data-lego="react"
>
  <div
    class="Section__controls"
    data-lego="react"
  />
</section>
`;
